syntax = "proto3";

package io.mgrpc;

import "google/rpc/status.proto";

option java_multiple_files = true;
option java_package = "io.mgrpc";
option java_outer_classname = "MGrpc";


message  RpcMessage{
  //Every rpc message is part of a call and should have a unique call id relative to all other calls
  //that are ongoing concurrently for a server. The string should be valid for use in mqtt topics.
  string callId = 1;

  //Sequence number. This is required because some brokers do not preserve order (e.g. AWS). Brokers may also send duplicates.
  //If there is potentially more than one message in a stream then the first message in a stream should
  //have a sequence number 1 and each subsequent message in that stream (including the completed message)
  //should increase the number by 1
  //If there is only one non-error message in a stream then that message should have a sequence number 0
  //This indicates that there is only one message in the stream and that it terminates the stream
  //(For request/response the client sends one message with sequence=0 and the server sends one message with sequence=0)
  uint32 sequence = 2;

  //A message is either Start, Value or Status (where Start contains a Value)
  //Examples:
  //Request response:
  //    client stream:   start.
  //    server stream:   value or status.
  //A client stream:     start, value, value, status.
  //A server stream:     value, value, status.
  //A client stream with cancellation:    start, value, value, status(cancelled).
  oneof message {
    Start start = 3;
    Value value = 4;
    google.rpc.Status status = 5;
  }
}


//The first message in a client stream must be a Start message
message Start{
  Header header = 1;
  Value value = 2;
}

//Any message that is not a Status or the first message in a client stream is a Value
message Value{
  //This the message/protobuf that is sent to/from the service method call as part of its request/response stream
  bytes contents = 1;

}

message Header{
  //The topic to which to send all replies for this call.
  string replyTo = 1;

  //Timeout in milliseconds. If not 0 then the server call should timeout after this interval.
  uint64 timeoutMillis = 2;

  //A list of metadata entries. Metadata can be used for things like security tokens etc.
  repeated MetadataEntry metadata = 3;

  //This can be aquired from MethodDescriptor.toProto()
  //This will only be set for first message in a client stream
  //MethodDescriptorProto methodDescriptor = 2;
}

message MetadataEntry{

  // To make it possible to transport metadata in http headers (and to work with existing grpc code),
  // the following rules apply:
  //
  //    Only the following ASCII characters are allowed in keys:
  //    digits: 0-9
  //    uppercase letters: A-Z (normalized to lower)
  //    lowercase letters: a-z
  //    special characters: -_.
  //
  //    Only the following ASCII characters are allowed in values:
  //    Space: 0x20, but must not be at the beginning or at the end of the value.
  //    ASCII visible characters (0x21-0x7E).
  //    (To encode binary values use base64)

  string key = 1;
  string value = 2;
}


//The server status topic will be
//  server/o/sys/status
//The server will send a connected=true message to this when it starts up or if it when a client sends it a message on
//  server/i/sys/status/prompt
//The server will send a connected=false message to out/sys/status when it shuts down normally or when it shuts down
//abnormally via its LWT
//The client status topic will be
//  server/i/sys/status/client/{clientId}
//so that clients can have restrictive policies. But the server will subscribe to
//  server/i/sys/status/#
//The client will send a connected=false message to in/sys/status/client/{clientId} when it shuts down normally
//(or when it shuts down abnormally LWT or some kind of watchdog). The server will then release any resources it
// has for {clientId}.
// The Channel will have a waitForServer method which a client can use to determine if a sever is up.
// This will method will subscribe to server/out/sys/status and send a prompt to server/in/sys/status/prompt
message ConnectionStatus{
  bool connected = 1;
}

